Fix list functions. (#18)